--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <meta property="og:title" content="Toshi & Kana - Wedding Invitation" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tkugimot.github.io/wedding-invitation/" />
+    <meta property="og:image" content="https://tkugimot.github.io/wedding-invitation/img/4.246fccff.jpg" />
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
@@ -11,7 +17,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>toshi-kana-wedding-invitation</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
