--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 
     <meta property="og:title" content="Toshi & Kana - Wedding Invitation" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tkugimot.github.io/wedding-invitation/" />
-    <meta property="og:image" content="https://tkugimot.github.io/wedding-invitation/img/4.246fccff.jpg" />
+    <meta property="og:url" content="https://toshi-and-kana.com/" />
+    <meta property="og:image" content="https://toshi-and-kana.com/img/syukketsu.ca69390e.png" />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
@@ -17,7 +17,7 @@
   </head>
   <body>
     <noscript>
-      <strong>toshi-kana-wedding-invitation</strong>
+      <strong>toshi-and-kana-wedding-invitation</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
